[tool.poetry]
name = "bacchus"
version = "1.1.0"
description = "Home Server solution based on docker"
authors = ["David Francos <opensource@davidfrancos.net>"]
packages = [{ include = "bacchus", from = "src" }]
license = "MIT"
include = ["src/bacchus/static"]

[tool.poetry.scripts]
bacchus = 'bacchus:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.22.0"
PyYAML = "^5.4.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
netifaces = "^0.10.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
